add hosts and groups

--- a/hosts.yml
+++ b/hosts.yml
@@ -4,28 +4,35 @@ all:
   children:
     suse-test-task:
       children:
+        slessrv_ic:
+          children:
+            dbservers_ic:
+              hosts:
+                server1ic:
+                  ansible_host: 10.1.1.51
+            backendservers_ic:
+              hosts:
+                server2ic:
+                  ansible_host: 10.1.1.52
+            appservers_ic:
+              hosts:
+                server3ic:
+                  ansible_host: 10.1.1.53
+          vars:
+            ansible_user: safeadmin
         slessrv:
           children:
             dbservers:
               hosts:
                 server1:
                   ansible_host: 192.168.1.79
-                server1ic:
-                  ansible_host: 10.1.1.51
             backendservers:
               hosts:
                 server2:
                   ansible_host: 192.168.1.80
-                server2ic:
-                  ansible_host: 10.1.1.52
             appservers:
               hosts:
                 server3:
                   ansible_host: 192.168.1.81
-                server3ic:
-                  ansible_host: 10.1.1.53
           vars:
-            some_server: foo.southeast.example.com
-            halon_system_timeout: 30
-            self_destruct_countdown: 60
-            escape_pods: 2
+            ansible_user: safeadmin
