--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,13 +1,13 @@
 [defaults]
 
-inventory   = ./hosts.yml
+inventory   = ./hosts
 log_path    = ./logs/ansible.log
 roles       = ./roles
 roles_path  = ./roles               
 
 host_key_checking       = false
-deprecation_warnings    = false
+deprecation_warnings    = true
 callback_whitelist      = profile_tasks
 
-remote_users = user
+#remote_users = user
 private_key_file = ~/.ssh/id_rsa
