--- a/hosts.yml
+++ b/hosts.yml
@@ -20,6 +20,8 @@ all:
                   ansible_host: 10.1.1.53
           vars:
             ansible_user: safeadmin
+            ansible_ssh_user: safeadmin
+            ansible_python_interpreter: /usr/bin/python3
         slessrv:
           children:
             dbservers:
@@ -36,3 +38,5 @@ all:
                   ansible_host: 192.168.1.81
           vars:
             ansible_user: safeadmin
+            ansible_ssh_user: safeadmin
+            ansible_python_interpreter: /usr/bin/python3
