--- a/roles/createuser/tasks/main.yml
+++ b/roles/createuser/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# tasks file for roles/createuser
 # Generate random password for new_user_name and the new_user_name
 # is required to change his/her password on first logon. 
 
