--- a/roles/createuser/tasks/main.yml
+++ b/roles/createuser/tasks/main.yml
@@ -1,30 +1,67 @@
 ---
 # tasks file for roles/createuser
-# Generate random password for new_user_name and the new_user_name
-# is required to change his/her password on first logon. 
+- name: Create mysql group
+  group:
+    name: mysql
+    state: present
+          
+- name: Create the '{{ suse_admin_user }}' user
+  user:
+    name: '{{ suse_admin_user }}'
+    shell: /bin/bash
+    groups: mysql,users
+    comment: '{{ suse_admin_user }} User'
+  
+- name: Add '{{ suse_admin_user }}' user to sudoers file
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: '^{{ suse_admin_user }}.*ALL$'
+    line: '{{ suse_admin_user }} ALL=(ALL) NOPASSWD: ALL'
+    validate: 'visudo -cf %s'
+  
+- name: Create '{{ suse_admin_user }}' folders
+  file:
+    path: "{{ item }}"
+    state: directory
+    owner: '{{ suse_admin_user }}'
+    group: users
+    mode: 0700
+  with_items:
+    - /etc/{{ suse_admin_user }}
+    - /opt/suse_test
 
-- name: Generate password for new user
-  shell: makepasswd --chars=12
-  register: user_password
+  
+- name: Set security limits for the '{{ suse_admin_user }}' user
+  copy:
+    src: ../files/limits.conf
+    dest: /etc/security/limits.d/99-{{ suse_admin_user }}.conf
+    owner: root
+    group: root
+    mode: 0644
 
-- name: Generate encrypted password
-  shell: mkpasswd --method=SHA-512 {{ user_password.stdout }}
-  register: encrypted_user_password
-
-- name: Create user account
-  user: name={{ new_user_name }}
-        password={{ encrypted_user_password.stdout }}
-        state=present
-        append=yes
-        shell="/bin/bash"
-        update_password=always
-  when: new_user_name is defined and new_user_name in uids
-  register: user_created
-
-- name: Force user to change password
-  shell: chage -d 0 {{ new_user_name }}
-  when: user_created.changed
-
-- name: User created
-  debug: msg="Password for {{ new_user_name }} is {{ user_password.stdout }}"
-  when: user_created.changed
+- name: Create '{{ suse_admin_user }}' ssh folder
+  file:
+    path: /home/{{ suse_admin_user }}/.ssh
+    state: directory
+    owner: '{{ suse_admin_user }}'
+    group: users
+    mode: 0700
+  
+- name: Copy the ssh keys and config for '{{ suse_admin_user }}' user
+  copy:
+    src: '{{ item.src }}'
+    dest: '/home/{{ suse_admin_user }}/.ssh/{{ item.dest }}'
+    owner: '{{ suse_admin_user }}'
+    group: users
+    mode: '{{ item.mode }}'
+  with_items:
+    - { src: '../files/id_rsa_{{ suse_admin_user }}', dest: 'id_rsa', mode: '0600' }
+    - { src: '../files/id_rsa_{{ suse_admin_user }}.pub', dest: 'id_rsa.pub', mode: '0644' }
+#    - { src: '../files/ssh_config', dest: 'config', mode: '0644' }
+  
+- name: Set ssh authorized key for the '{{ suse_admin_user }}'' user
+  authorized_key:
+    user: '{{ suse_admin_user }}'
+    state: present
+    key: "{{ lookup('file', '../files/id_rsa_{{ suse_admin_user }}.pub') }}"
